--- a/styles.css
+++ b/styles.css
@@ -199,9 +199,34 @@ footer{
 
 header {
     background-color: brown;
-    height: 60px;
+    height: fit-content;
+    width: 100%;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+header h1 {
+    font-size: 20px;
+    cursor: pointer;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+header h1:hover {
+    color: red;
+}
+
+header a {
+    padding: 0 5px;
+}
+
+.page-active {
+    color: white;
 }
 
 .projects-container{
@@ -211,30 +236,22 @@ header {
 
 .projects-buttons{
     background-color: coral;
-    height: 50px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
+    height: fit-content;
 }
 
 .button { 
-    height: 50px;
-    width: 50px;
-    border: 1px solid black;
-    margin: auto 5px;
-    border-radius: 50%;
+    background-color: purple;
+    cursor: pointer;
+    margin: auto;
+    padding: 20px;
+    align-items: center;
     justify-content: center;
-    padding: 5px;
-    background-color: darkmagenta;
-    font-size: 15px;
+    text-align: center;
 }
 
 .divider-button{
-    border: 5px solid black;
-    margin: 10px;
+    border: 2px solid black;
+    margin: 5px;
     border-radius: 50px;
 }
 
@@ -278,4 +295,33 @@ header {
     border-radius: 5px;
     margin: 10px 0px;
     font-size: 15px;
+}
+
+
+/* DROPDOWN */
+
+#dropdown {
+    background-color: #00000033;
+    width: 200px;
+    font-size: 16px;
+    padding: 5px;
+    align-items: center;
+    margin: auto;
+}
+
+.dropdown-item {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 2px;
+}
+.dropdown-item:hover {
+    background-color: rgba(0, 204, 255, 0.459);
+}
+
+#toggle {
+    width: fit-content;
+    font-size: 16px;
 }
