--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Licorice&family=Montserrat:wght@100;400;900&family=Poppins:wght@100;400;900&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+:root {
+    --colorRose: #ce7777;
+    --colorWhite: #fff;
+    --colorBlue: #2b3a55;
+    --colorLightRose: #f2e5e5;
+    --colorLightGrey:rgb(245, 245, 245);
+    --colorGrey: rgb(230, 230, 230);
+}
+  
+body {
+    font-family: 'Poppins', sans-serif;
+}
 
 /* NAVBAR TOP */
 
 .navbar-top {
-    background-color: blue;
+    background-color: var(--colorLightGrey);
+    color: var(--colorBlue);
     position: sticky;
     top: 0 ;
     height: 80px;
@@ -17,22 +31,58 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-around;
+    font-weight: 400;
+}
+
+.nav-brand {
+    padding: 0;
+    font-size: 12px;
+    font-weight: 900;
+}
+
+.nav-brand i {
+    color: var(--colorRose);
 }
 
 .nav-link a {
-   text-decoration: none;
-   color: black; 
+    color: var(--colorBlue);
+    display: inline;
+   text-decoration: none; 
    padding: 5px;
    text-transform: uppercase;
+   text-align: left;
+}
+.nav-link a:hover {
+    color: var(--colorRose);
+}
+
+@media (max-width: 400px) {
+    .nav-link a {
+        display: inline-block;
+        width: 100%;
+        padding: 2px 30px;
+        text-align: center;
+    }
+
+    .nav-brand {
+        padding: 30px;
+        font-size: 12px;
+    }
 }
 
 /* HERO SECTION */
 
 .hero-section {
-    background-color: red;
     height: 100vh;
     width: 100vw;
     position: relative;
+}
+
+.bg-color{
+    background-color: var(--colorRose);
+    height: 100vh;
+    width: 40%;
+    position: absolute;
 }
 
 .home-scroll {
@@ -40,7 +90,20 @@
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: aqua;
+    font-weight: 400;
+}
+.home-scroll h1 {
+    font-size: 12px;
+    padding: 10px;
+    font-weight: 400;
+}
+
+.home-scroll i {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 10px;
 }
 
 .hero-container {
@@ -53,7 +116,7 @@
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: green;
+
 }
 
 .container-profile {
@@ -61,35 +124,57 @@
     padding: 30px;
     margin: 10px;
     width: 250px;
-    height: 300px;
+    height: 350px;
+    border: 1px solid var(--colorGrey);
+    border-radius: 2px;
+    transform: rotate(-5deg);
+    transition: transform 0.5s ease-out;
 }
+.container-profile:hover {
+    transform: rotate(2deg);
+  }
 
 .profile-img-top{
-    border: 1px solid red;
     margin-bottom: 20px;
-    height: 80%;
+    height: 65%;
     width: 100%;
     object-fit: cover;
 }
 
+.profile-title {
+    font-family: 'Licorice', cursive;
+    font-size: 35px;
+    font-weight: bold;
+    color: var(--colorBlue);
+}
+
 .container-presentation {
     width: 250px;
-    height: 300px;
-    background-color: pink;
+    height: 350px;
 }
 
 .presentation-titre{
-    font-size: 60px;
+    font-size: 120px;
+    font-weight: bold;
     padding: 40px;
     text-align: left;
+    font-family: 'Licorice', cursive;
+    color: var(--colorBlue);
 }
 
 .presentation-job {
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: 400;
     text-align: left;
-    padding: 20px 40px ;
+    padding: 0 40px ;
+    color: var(--colorBlue);
 }
 
+.sec-text{
+    color: var(--colorRose);
+    font-weight: bold;
+}
+  
 
 
 @media (max-width: 900px) {
@@ -109,58 +194,136 @@
 }
 
 
+/* CHANGING CONTENT CSS */
+
+
+.sec-text:after {
+    content: "";
+    animation: animate 10s linear infinite;  
+  }
+  
+  @keyframes animate {
+    0% {
+      content: "Développeuse Web";
+    }
+  
+    14% {
+      content: "Artiste 3D";
+    }
+  
+    28% {
+      content: "Dev Front-End";
+    }
+  
+    47% {
+      content: "Généraliste 3D";
+    }
+  
+    57% {
+      content: "Dev Back-End";
+    }
+  
+    71% {
+      content: "Grooming Artist";
+    }
+  
+    85% {
+      content: "Dev Full-Stack";
+    }
+  
+    100% {
+      content: "CFX Artist";
+    }
+  }
+  
+
+
 /* IMG BACKGROUND */
 
 .img-background-section {
-    background-color: yellow;
-    height: 600px;
-    width: 100vw;
+    padding: 0;
+    height: 800px ;
+    background-image: url("https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80") ;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
 }
 
-.img-bg{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+@media only screen and (max-width: 900px) {
+    /* For Tablets */
+  
+    .container-home-img {
+      background-attachment: scroll;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    /* For mobile */
+    .container-home-img {
+        background-attachment: scroll;
+    } 
 }
 
 /* PROJETS SECTION */
 
 .projects-section {
-    background-color: blueviolet;
     height: fit-content;
     width: 100vw;
-
+    background-color: var(--colorLightRose);
+    color: var(--colorBlue);
 }
 
 .projects-section h3 {
     text-align: center;
-    padding: 20px;
-    font-size: 50px;
+    padding: 30px 0 10px;
+    font-size: 40px;
+    color: var(--colorBlue);
 }
 
 .container-projects {
-    background-color: aqua;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding:  50px 0;
+    padding:  0px 0 30px 0;
 }
 
 .container-item {
-    padding: 30px;
+    width: 250px;
+    margin: 30px;
+    text-decoration: none;
+    transform: scale(1);
+    transition: transform 0.5s ease-out;
+}
+.container-item a{
+    text-decoration: none;
 }
 
-.container-item img{
-    width: 300px;
-    height: 300px;
+.container-item:hover {
+    transform: scale(1.05);
+}
+.container-item img {
+    width: 250px;
+    height: 250px;
     object-fit: cover;
-    border-radius: 10px;
+    border-radius: 30px;
+    border: 1px solid var(--color3);
+    opacity: 0.5;
+    transition: opacity 0.5s ease-out;
+}
+
+.container-item img:hover {
+    opacity: 1;
 }
 
 .container-item h4 {
     padding: 5px;
     font-size: 20px;
+    color: var(--colorBlue);
+}
+.container-item p {
+    color: var(--colorBlue);
 }
 
 @media (max-width: 700px) {
@@ -173,10 +336,17 @@
 /* CONTACT SECTION */
 
 .contact-section {
-    background-color: brown;
+    background-color: var(--colorRose);
+    color: var(--colorWhite);
     height: fit-content;
     padding: 30px;
     text-align: center;
+}
+
+.contact-section h3 {
+    text-align: center;
+    padding: 20px;
+    font-size: 40px;
 }
 
 .contact-titre {
@@ -191,14 +361,19 @@
 /* FOOTER */
 
 footer{
-    background-color: darkgrey;
+    background-color: var(--colorLightGrey);
+    color: var(--colorRose);
     height: 80px;
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
 }
 
 /************************* PAGE PROJET **************************/
 
 header {
-    background-color: brown;
     height: fit-content;
     width: 100%;
     text-align: center;
@@ -211,14 +386,10 @@ header {
 }
 
 header h1 {
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
-    border: 1px solid black;
-    padding: 5px;
-}
-
-header h1:hover {
-    color: red;
+    padding: 10px;
+    color: var(--colorBlue);
 }
 
 header a {
@@ -230,27 +401,31 @@ header a {
 }
 
 .projects-container{
- background-color: aqua;
  padding: 0px 30px;
 }
 
 .projects-buttons{
-    background-color: coral;
     height: fit-content;
-}
-
-.button { 
-    background-color: purple;
-    cursor: pointer;
-    margin: auto;
-    padding: 20px;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     text-align: center;
 }
 
+button { 
+    background-color: var(--colorWhite);
+    border: none;
+    border-bottom: 2px solid var(--colorBlue);
+    cursor: pointer;
+    margin: 10px;
+    padding: 5px;
+}
+button:hover {
+    border-bottom: 2px solid var(--colorRose);
+    color: var(--colorRose);
+}
+
 .divider-button{
-    border: 2px solid black;
     margin: 5px;
     border-radius: 50px;
 }
@@ -264,12 +439,16 @@ header a {
 }
 
 .project-item {
-    border: 1px solid black;
     margin: 10px 0 30px;
     padding: 20px;
     width: 350px;
-
+    transform: translate(0px, 0px);
+    transition: transform 0.2s ease-out;
 }
+.project-item:hover {
+    transform: translate(10px, -10px);
+}
+
 .project-item a{
     text-decoration: none;
 }
@@ -282,13 +461,16 @@ header a {
   cursor: pointer;
     border: 2px solid var(--color4);
 }
+
 .project-card-info {
-    color: red;
+    color: var(--colorBlue);
     padding: 10px;
     font-size: 20px;
+    font-weight: 400;
 }
 
 .project-badge{
+    background-color: grey;
     display: inline-block;
     padding: 2px 10px;
     color: white;
@@ -297,31 +479,139 @@ header a {
     font-size: 15px;
 }
 
+/************************* PAGE PROFIL **************************/
 
-/* DROPDOWN */
-
-#dropdown {
-    background-color: #00000033;
-    width: 200px;
-    font-size: 16px;
-    padding: 5px;
-    align-items: center;
-    margin: auto;
-}
-
-.dropdown-item {
-    display: block;
+.container-profil-info {
+    padding: 30px;
+    text-align: right;
+    font-family: "Poppins", sans-serif;
+    color: var(--colorBlue);
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  
+  
+  .container-profil-header {
+    padding: 30px;
+  }
+  
+  .profil-info-titre {
+    font-weight: bold;
+  }
+  
+  .profil-intro {
+    font-style: italic;
+  }
+  
+  .profil-intro span {
+    font-weight: bold;
+    color: var(--colorRose)
+  }
+  
+  
+  .container-profil-body {
+    padding: 30px;
+    display: grid;
+    grid-template-areas:
+      "dev troisd"
+      "foot troisd";
+    gap: 20px;
+    text-align: left;
+  }
+  
+  .profil-dev {
+    grid-area: dev;
+  }
+  
+  .profil-dev span {
+    font-weight: bold;
+    color: var(--colorRose);
+    cursor: pointer;
     text-decoration: none;
-    text-align: center;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 2px;
-}
-.dropdown-item:hover {
-    background-color: rgba(0, 204, 255, 0.459);
-}
-
-#toggle {
-    width: fit-content;
-    font-size: 16px;
-}
+  }
+  .profil-dev a {
+      text-decoration: none;
+  }
+  
+  .profil-3d {
+    grid-area: troisd;
+  }
+  
+  .profil-3d span {
+    font-weight: bold;
+    color: var(--colorRose)
+  }
+  
+  .profil-footer {
+    grid-area: foot;
+    padding-top: 10px;
+  }
+  
+  .profil-footer hr {
+    display: inline-block;
+    margin: auto;
+    align-items: right;
+    width: 20%;
+    padding-bottom: 5px;
+  }
+  
+  .profil-footer-dev {
+    color: var(--colorRose);
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  .profil-footer-dev:hover {
+      color: var(--colorBlue);
+  }
+  
+  .profil-footer-3d {
+    color: var(--colorRose);
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  .profil-footer-3d:hover {
+      color: var(--colorBlue);
+  }
+  
+  @media only screen and (max-width: 900px) {
+    /* For Tablets */
+  
+    
+    .container-profil-body {
+      grid-template-areas:
+        "dev dev"
+        "troisd troisd"
+        "foot foot";
+    }
+  }
+  
+  @media only screen and (max-width: 700px) {
+  
+    /* For Mobile */
+  
+    .comp-title {
+      grid-area: comp;
+      font-family: 'Licorice', sans-serif;
+      text-align: right;
+      font-size: 60px;
+      padding: 50px 50px 0px;
+      margin-right: 5%;
+  
+    }
+  
+    .container-profil-info{
+      margin-left: 0%;
+      margin-right: 0%;
+    }
+  
+    .container-profil-body {
+      grid-template-areas:
+        "dev dev"
+        "troisd troisd"
+        "foot foot";
+    }
+  
+  
+  }
