--- a/styles.css
+++ b/styles.css
@@ -596,6 +596,33 @@ button:hover {
     margin: 10px 0px;
     font-size: 14px;
 }
+.project-badge-fe{
+    background-color: rgb(48, 128, 81);
+    display: inline-block;
+    padding: 2px 10px;
+    color: white;
+    border-radius: 5px;
+    margin: 10px 0px;
+    font-size: 14px;
+}
+.project-badge-be{
+    background-color: rgb(199, 150, 16);
+    display: inline-block;
+    padding: 2px 10px;
+    color: white;
+    border-radius: 5px;
+    margin: 10px 0px;
+    font-size: 14px;
+}
+.project-badge-fs{
+    background-color: rgb(16, 65, 199);
+    display: inline-block;
+    padding: 2px 10px;
+    color: white;
+    border-radius: 5px;
+    margin: 10px 0px;
+    font-size: 14px;
+}
 
 .project-description {
     font-size: 15px;
@@ -616,6 +643,8 @@ button:hover {
 }
 .disabled{
     color: grey;
+    font-weight: bold;
+    z-index: 1;
 }
 
 @media (max-width: 900px) {
